--- a/ABIMSIM/SettingsView_TV.xib
+++ b/ABIMSIM/SettingsView_TV.xib
@@ -1,15 +1,205 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.AppleTV.XIB" version="3.0" toolsVersion="6241" systemVersion="14A346" targetRuntime="AppleTV" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="NO">
+<document type="com.apple.InterfaceBuilder.AppleTV.XIB" version="3.0" toolsVersion="9059" systemVersion="14F1021" targetRuntime="AppleTV" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6235"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="Voltaire-Regular.ttf">
+            <string>Voltaire</string>
+            <string>Voltaire</string>
+        </mutableArray>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+        <view contentMode="scaleToFill" id="uom-KZ-6EE" userLabel="SettingsView" customClass="SettingsView">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="424"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="topRight" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Ring_0" translatesAutoresizingMaskIntoConstraints="NO" id="fBt-qS-vki">
+                    <rect key="frame" x="-159" y="11" width="468" height="468"/>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="topRight" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Ring_1" translatesAutoresizingMaskIntoConstraints="NO" id="eQb-fy-Ik1">
+                    <rect key="frame" x="-159" y="11" width="468" height="468"/>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="topRight" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Ring_2" translatesAutoresizingMaskIntoConstraints="NO" id="kmn-MX-nKa">
+                    <rect key="frame" x="-164" y="5" width="479" height="479"/>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SFX" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iAu-nQ-hDg">
+                    <rect key="frame" x="135" y="124" width="22" height="22"/>
+                    <fontDescription key="fontDescription" name="Voltaire" family="Voltaire" pointSize="17"/>
+                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xme-ox-pnA">
+                    <rect key="frame" x="15" y="50" width="90" height="27"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="27" id="Gkl-bI-7KN"/>
+                        <constraint firstAttribute="width" constant="90" id="JWe-Qu-Sqq"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="SETTINGS" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wee-Jy-FCA">
+                    <rect key="frame" x="15" y="44" width="91" height="38"/>
+                    <fontDescription key="fontDescription" name="Futura-CondensedMedium" family="Futura" pointSize="31"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RUD-lz-DsJ" customClass="DCRoundSwitch">
+                    <rect key="frame" x="111" y="92" width="70" height="30"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="VR3-8v-pU5"/>
+                        <constraint firstAttribute="width" constant="70" id="hAH-Iu-xfH"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mhf-IA-Qia" customClass="DCRoundSwitch">
+                    <rect key="frame" x="15" y="92" width="70" height="30"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="69B-8O-0EK"/>
+                        <constraint firstAttribute="width" constant="70" id="wDp-PC-ln0"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TnE-Kb-whH" customClass="DCRoundSwitch">
+                    <rect key="frame" x="108" y="291" width="70" height="30"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="70" id="lzN-XU-zCd"/>
+                        <constraint firstAttribute="height" constant="30" id="v8e-mr-GcU"/>
+                    </constraints>
+                </view>
+                <view alpha="0.20000000298023224" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7Qf-VW-RQG">
+                    <rect key="frame" x="15" y="160" width="240" height="1"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="240" id="Ewa-WM-AmT"/>
+                        <constraint firstAttribute="height" constant="1" id="wBt-Rr-Yf8"/>
+                    </constraints>
+                </view>
+                <view alpha="0.20000000298023224" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ivj-fX-aDI">
+                    <rect key="frame" x="15" y="277" width="240" height="1"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="5VF-Ca-LaQ"/>
+                        <constraint firstAttribute="width" constant="240" id="r8v-wP-ZIu"/>
+                    </constraints>
+                </view>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dWJ-Jt-fht">
+                    <rect key="frame" x="15" y="176" width="63" height="27"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="27" id="6Pf-Ah-qHh"/>
+                        <constraint firstAttribute="width" constant="63" id="LER-Lh-KTj"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="SHARE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UK9-Qu-2Y1">
+                    <rect key="frame" x="15" y="171" width="64" height="38"/>
+                    <fontDescription key="fontDescription" name="Futura-CondensedMedium" family="Futura" pointSize="31"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SRU-hJ-9SL">
+                    <rect key="frame" x="15" y="218" width="44" height="44"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="44" id="Xd2-yP-8OW"/>
+                        <constraint firstAttribute="height" constant="44" id="luy-3R-WiT"/>
+                    </constraints>
+                    <state key="normal" image="TwitterIcon">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="twitterTapped:" destination="uom-KZ-6EE" eventType="primaryActionTriggered" id="lBp-Kt-0g4"/>
+                    </connections>
+                </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MUSIC" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SK2-f3-oKl">
+                    <rect key="frame" x="31" y="124" width="38" height="22"/>
+                    <fontDescription key="fontDescription" name="Voltaire" family="Voltaire" pointSize="17"/>
+                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="InE-v4-vvQ">
+                    <rect key="frame" x="15" y="353" width="55" height="55"/>
+                    <state key="normal" image="ResetButton">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="resetTapped:" destination="uom-KZ-6EE" eventType="primaryActionTriggered" id="Ztn-ro-rFt"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sEq-7G-WLf">
+                    <rect key="frame" x="74" y="218" width="44" height="44"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="JQk-D5-ENF"/>
+                        <constraint firstAttribute="width" constant="44" id="sZD-cO-Fyt"/>
+                    </constraints>
+                    <state key="normal" image="FBIcon">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="facebookTapped:" destination="uom-KZ-6EE" eventType="primaryActionTriggered" id="b9s-i2-Gyw"/>
+                    </connections>
+                </button>
+                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="mpointsLogo_settings" translatesAutoresizingMaskIntoConstraints="NO" id="0MQ-wD-leH">
+                    <rect key="frame" x="15" y="293" width="83" height="25"/>
+                </imageView>
+            </subviews>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="RUD-lz-DsJ" firstAttribute="leading" secondItem="mhf-IA-Qia" secondAttribute="trailing" constant="26" id="607-6I-FSH"/>
+                <constraint firstItem="iAu-nQ-hDg" firstAttribute="top" secondItem="RUD-lz-DsJ" secondAttribute="bottom" constant="2" id="6oc-6T-xb3"/>
+                <constraint firstItem="SRU-hJ-9SL" firstAttribute="top" secondItem="dWJ-Jt-fht" secondAttribute="bottom" constant="15" id="71o-a4-1Ie"/>
+                <constraint firstItem="0MQ-wD-leH" firstAttribute="top" secondItem="Ivj-fX-aDI" secondAttribute="bottom" constant="15" id="81c-60-tw6"/>
+                <constraint firstItem="InE-v4-vvQ" firstAttribute="top" secondItem="Ivj-fX-aDI" secondAttribute="bottom" constant="75" id="8ia-Ni-B2r"/>
+                <constraint firstItem="SRU-hJ-9SL" firstAttribute="bottom" secondItem="sEq-7G-WLf" secondAttribute="bottom" id="CPS-Mf-T1D"/>
+                <constraint firstItem="InE-v4-vvQ" firstAttribute="leading" secondItem="xme-ox-pnA" secondAttribute="leading" id="HG1-5d-eit"/>
+                <constraint firstItem="mhf-IA-Qia" firstAttribute="centerX" secondItem="SK2-f3-oKl" secondAttribute="centerX" id="NQp-HO-DNa"/>
+                <constraint firstItem="7Qf-VW-RQG" firstAttribute="top" secondItem="SK2-f3-oKl" secondAttribute="bottom" constant="15" id="PCc-9i-we9"/>
+                <constraint firstItem="eQb-fy-Ik1" firstAttribute="top" secondItem="uom-KZ-6EE" secondAttribute="top" constant="11" id="PMJ-ey-Co8"/>
+                <constraint firstItem="xme-ox-pnA" firstAttribute="top" secondItem="uom-KZ-6EE" secondAttribute="top" constant="50" id="Pkg-Yv-CGR"/>
+                <constraint firstItem="mhf-IA-Qia" firstAttribute="top" secondItem="xme-ox-pnA" secondAttribute="bottom" constant="15" id="RWZ-4z-UCL"/>
+                <constraint firstAttribute="trailing" secondItem="kmn-MX-nKa" secondAttribute="trailing" constant="5" id="S0G-ak-foK"/>
+                <constraint firstItem="SRU-hJ-9SL" firstAttribute="leading" secondItem="0MQ-wD-leH" secondAttribute="leading" id="Sz3-eo-vl2"/>
+                <constraint firstItem="xme-ox-pnA" firstAttribute="leading" secondItem="mhf-IA-Qia" secondAttribute="leading" id="U1M-lb-Rae"/>
+                <constraint firstItem="wee-Jy-FCA" firstAttribute="centerY" secondItem="xme-ox-pnA" secondAttribute="centerY" id="U3L-9k-tma"/>
+                <constraint firstItem="kmn-MX-nKa" firstAttribute="top" secondItem="uom-KZ-6EE" secondAttribute="top" constant="5" id="UgZ-vQ-QtX"/>
+                <constraint firstItem="TnE-Kb-whH" firstAttribute="leading" secondItem="0MQ-wD-leH" secondAttribute="trailing" constant="10" id="ZEU-Bv-scv"/>
+                <constraint firstItem="xme-ox-pnA" firstAttribute="leading" secondItem="7Qf-VW-RQG" secondAttribute="leading" id="aJN-Mo-Evw"/>
+                <constraint firstItem="xme-ox-pnA" firstAttribute="leading" secondItem="Ivj-fX-aDI" secondAttribute="leading" id="bsF-Rh-Mqq"/>
+                <constraint firstItem="dWJ-Jt-fht" firstAttribute="leading" secondItem="UK9-Qu-2Y1" secondAttribute="leading" id="cJ0-zf-CBG"/>
+                <constraint firstItem="TnE-Kb-whH" firstAttribute="centerY" secondItem="0MQ-wD-leH" secondAttribute="centerY" id="fV1-oq-yBJ"/>
+                <constraint firstItem="xme-ox-pnA" firstAttribute="leading" secondItem="uom-KZ-6EE" secondAttribute="leading" constant="15" id="ftg-XK-iyv"/>
+                <constraint firstAttribute="trailing" secondItem="eQb-fy-Ik1" secondAttribute="trailing" constant="11" id="g4t-YV-B2z"/>
+                <constraint firstAttribute="trailing" secondItem="fBt-qS-vki" secondAttribute="trailing" constant="11" id="gi2-F4-knA"/>
+                <constraint firstItem="SK2-f3-oKl" firstAttribute="top" secondItem="mhf-IA-Qia" secondAttribute="bottom" constant="2" id="h4B-h5-IBf"/>
+                <constraint firstItem="fBt-qS-vki" firstAttribute="top" secondItem="uom-KZ-6EE" secondAttribute="top" constant="11" id="hi1-i9-Cbz"/>
+                <constraint firstItem="sEq-7G-WLf" firstAttribute="leading" secondItem="SRU-hJ-9SL" secondAttribute="trailing" constant="15" id="hwU-RT-Bzt"/>
+                <constraint firstItem="xme-ox-pnA" firstAttribute="leading" secondItem="dWJ-Jt-fht" secondAttribute="leading" id="j3g-fo-o95"/>
+                <constraint firstItem="Ivj-fX-aDI" firstAttribute="top" secondItem="sEq-7G-WLf" secondAttribute="bottom" constant="15" id="lqp-lC-3IZ"/>
+                <constraint firstItem="RUD-lz-DsJ" firstAttribute="centerY" secondItem="mhf-IA-Qia" secondAttribute="centerY" id="mZV-hA-SrU"/>
+                <constraint firstItem="iAu-nQ-hDg" firstAttribute="centerX" secondItem="RUD-lz-DsJ" secondAttribute="centerX" id="nxl-hY-2kw"/>
+                <constraint firstItem="SRU-hJ-9SL" firstAttribute="top" secondItem="sEq-7G-WLf" secondAttribute="top" id="ps0-Mz-ezw"/>
+                <constraint firstItem="dWJ-Jt-fht" firstAttribute="top" secondItem="7Qf-VW-RQG" secondAttribute="bottom" constant="15" id="wCK-km-9oc"/>
+                <constraint firstItem="wee-Jy-FCA" firstAttribute="centerX" secondItem="xme-ox-pnA" secondAttribute="centerX" id="xkk-xz-7ev"/>
+                <constraint firstItem="SRU-hJ-9SL" firstAttribute="leading" secondItem="xme-ox-pnA" secondAttribute="leading" id="ywB-fj-NXJ"/>
+                <constraint firstItem="dWJ-Jt-fht" firstAttribute="centerY" secondItem="UK9-Qu-2Y1" secondAttribute="centerY" id="z4k-SU-OIc"/>
+            </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="musicSettingsToggle" destination="mhf-IA-Qia" id="GGc-Q9-cbt"/>
+                <outlet property="sessionMSettingsToggle" destination="TnE-Kb-whH" id="ooA-Ng-e41"/>
+                <outlet property="sessionMToggleLogo" destination="0MQ-wD-leH" id="xGQ-dX-cac"/>
+                <outlet property="settingsLeadngConstraint" destination="ftg-XK-iyv" id="PZU-Mi-KLB"/>
+                <outlet property="sfxSettingsToggle" destination="RUD-lz-DsJ" id="6J3-HO-8X9"/>
+            </connections>
+            <point key="canvasLocation" x="310" y="245"/>
         </view>
     </objects>
+    <resources>
+        <image name="FBIcon" width="32" height="31"/>
+        <image name="ResetButton" width="55" height="55"/>
+        <image name="Ring_0" width="468" height="468"/>
+        <image name="Ring_1" width="468" height="468"/>
+        <image name="Ring_2" width="479" height="479"/>
+        <image name="TwitterIcon" width="40" height="32"/>
+        <image name="mpointsLogo_settings" width="104" height="25"/>
+    </resources>
 </document>
