--- a/ABIMSIM/MainMenuView.xib
+++ b/ABIMSIM/MainMenuView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -162,11 +162,21 @@
                         <action selector="hamburgerTapped:" destination="tyn-rH-lKS" eventType="touchUpInside" id="7zc-50-O0v"/>
                     </connections>
                 </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qHQ-aQ-u5E" customClass="DCRoundSwitch">
+                    <rect key="frame" x="125" y="523" width="70" height="30"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="3js-fl-Tf7"/>
+                        <constraint firstAttribute="width" constant="70" id="7h9-Ki-7NQ"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstAttribute="bottom" secondItem="qHQ-aQ-u5E" secondAttribute="bottom" constant="15" id="5uu-24-po5"/>
                 <constraint firstItem="Bim-RU-DVf" firstAttribute="leading" secondItem="tyn-rH-lKS" secondAttribute="leading" constant="10" id="AyD-6L-7Da"/>
                 <constraint firstAttribute="centerY" secondItem="lUf-dq-MXE" secondAttribute="centerY" constant="-6.5" id="MNH-nk-X4k"/>
+                <constraint firstItem="qHQ-aQ-u5E" firstAttribute="centerX" secondItem="tyn-rH-lKS" secondAttribute="centerX" id="V14-TR-LXS"/>
                 <constraint firstItem="hQe-4c-cCB" firstAttribute="leading" secondItem="tyn-rH-lKS" secondAttribute="leading" id="WvH-WP-NEb"/>
                 <constraint firstItem="Yua-2N-2Jd" firstAttribute="centerX" secondItem="tyn-rH-lKS" secondAttribute="centerX" id="Zyt-k3-IbQ"/>
                 <constraint firstAttribute="centerX" secondItem="lUf-dq-MXE" secondAttribute="centerX" constant="-6.5" id="dG4-LN-yWA"/>
@@ -175,6 +185,7 @@
                 <constraint firstItem="Yua-2N-2Jd" firstAttribute="top" secondItem="tyn-rH-lKS" secondAttribute="top" constant="32" id="zIw-aB-HdS"/>
             </constraints>
             <connections>
+                <outlet property="autoReplaySwitch" destination="qHQ-aQ-u5E" id="aCf-9f-I6s"/>
                 <outlet property="buttonContainerView" destination="lUf-dq-MXE" id="nxl-wp-Zd7"/>
                 <outlet property="hamburgerBottomConstraint" destination="nAs-Av-AGJ" id="k0H-uU-n5F"/>
                 <outlet property="hamburgerButton" destination="Bim-RU-DVf" id="LnM-hJ-cqh"/>
